# slack-stack

./: .env.deploy.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  README.md  deploy.sh
.github/: dependabot.yml  pull_request_template.md
PAXminer/: .samignore  Configure_PAXminer_Environments.py  DelimFileWriter.py  Dockerfile  Dockerfile.slack  Join_Channels_and_Create_Directories.py  PAXexport_Daily_Execution.py  README.md  config_paxminer.py  config_schedule.py  handlers.py  manifest.json  paxminer_db.py  report_defaults.json  requirements-lambda.txt  requirements-slack.txt  requirements.txt  schedule_reports.py  schedule_runner.py  schedule_schema.py  scheduling.py  slack_app.py  slack_blocks.py  slack_http.py  slack_schedule.py  slack_util.py  template.yaml
common/: __init__.py  token_bootstrap.py
docs/: ARCHITECTURE.md  DEPLOY.md  DEVELOPMENT.md  MIGRATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
infra/: template.bootstrap.yaml
slackblast/slackblast/: app.py  pyproject.toml  requirements.txt
slackblast/slackblast/features/: backblast.py  config.py  custom_fields.py  preblast.py  strava.py  weaselbot.py  welcome.py
slackblast/slackblast/utilities/: announcements.py  constants.py  db_oauth_stores.py  helper_functions.py  paxminer_achievements_webhook.py  paxminer_sweep.py  routing.py
slackblast/slackblast/utilities/database/: __init__.py  create_clear_local_db.py  create_clear_local_db.sql
slackblast/slackblast/utilities/database/orm/: __init__.py
slackblast/slackblast/utilities/slack/: actions.py  forms.py
(+147 files in other folders)
